# logitray

./: .gitattributes  Cargo.toml  LICENSE  README.md
.github/workflows/: pr-build.yml  release-on-tag.yml
src/: app.rs  autostart.rs  config.rs  icon.rs  lib.rs  main.rs  notify.rs  tray.rs
src/hid/: client.rs  diag.rs  mod.rs  protocol.rs  scanner.rs
